Bugfixes in lido3

--- a/src/css/layout-lido.css
+++ b/src/css/layout-lido.css
@@ -1,6 +1,6 @@
 ﻿
 
-#actors{
+#persons{
 
 left: 0px;
 right: 0px;
@@ -271,7 +271,7 @@ padding: 5px 10px;
 
 /*--- Actors ---*/
 
-.actor_languages_entry{
+.person_languages_entry{
 
 	background-color: tomato;
 	border-radius: 5px;
@@ -286,13 +286,13 @@ padding: 5px 10px;
 
 }
 
-#actor_languages_td{
+#person_languages_td{
 
 	width: 350px;
 
 }
 
-#actor_list{
+#person_list{
 
 	width: 215px;
 	position: fixed;
@@ -315,7 +315,7 @@ padding: 5px 10px;
 
 }
 
-.actor_list_entry h2{
+.person_list_entry h2{
 
 	line-height: 0em;
 	white-space: nowrap;
@@ -323,22 +323,22 @@ padding: 5px 10px;
 
 }
 
-#actor_title_div{
+#person_title_div{
 
 	padding: 15px;
 
 }
 
-#actor_content_div{
+#person_content_div{
 
 	background-color: #AABFFF;
 }
 
-#actor_view{
+#person_view{
 
 	background-color: lightskyblue;
 	float: left;
-	left: 260px;
+	left: 560px;
 	position: absolute;
 	right: 30px;
 	border-radius: 10px;
@@ -347,7 +347,7 @@ padding: 5px 10px;
 
 }
 
-.actor_list_entry{
+.person_list_entry{
 
 	line-height: 0em;
 	cursor: pointer;
@@ -359,11 +359,11 @@ padding: 5px 10px;
 	margin-bottom: 10px;
 }
 
-#actor_options_div{
+#person_options_div{
 	width: 300px;
 }
 
-#actor_form_title{
+#person_form_title{
 
 	display: inline;
 
@@ -371,7 +371,7 @@ padding: 5px 10px;
 
 /*--- Sessions ---*/
 
-.session_table, .actor_table{
+.session_table, .person_table{
 	
 	border: none;
 	margin-top: 0px;
@@ -392,26 +392,26 @@ padding: 5px 10px;
 }
 
 
-.session_table tr td, .actor_table tr td{
+.session_table tr td, .person_table tr td{
 
 border-top: none;
 
 }
 
-.actors{
+.persons{
 
 clear: both;
 
 }
 
-.actor_name_disp{
+.person_name_disp{
 
 line-height: 16pt;
 
 
 }
 
-.actor_role_disp{
+.person_role_disp{
 
 font-size: 10pt;
 margin: 0px;
@@ -427,7 +427,7 @@ width: 150px;
 
 }
 
-.actors select{
+.persons select{
 
 width: 240px;
 
@@ -435,7 +435,7 @@ width: 240px;
 
 
 
-.delete_actor_icon{
+.delete_person_icon{
 
 height: 43px;
 float: left;
@@ -456,7 +456,7 @@ background-color: bisque;
 	
 }
 
-.actor{
+.person{
 	
 padding-top: 10px;
 	
@@ -469,7 +469,7 @@ min-width: 173px;
 width: 200px;
 }
 
-.session_actors_td{
+.session_persons_td{
 	
 background-color: 	#FFCCCC;
 overflow: hidden;
@@ -478,7 +478,7 @@ min-width: 250px;
 
 }
 
-.actor_in_session{
+.person_in_session{
 
 background: rgb(255, 139, 199);
 line-height: 0em;
@@ -493,7 +493,7 @@ white-space: nowrap;
 margin-bottom: 10px;
 }
 
-.actor_in_session_wrap{
+.person_in_session_wrap{
 
 width: 250px;
 
