--- a/src/css/layout-lido.css
+++ b/src/css/layout-lido.css
@@ -1,4 +1,4 @@
-﻿
+
 
 #lidopersons{
 
@@ -34,7 +34,51 @@ background-color: #CCEEDD;
 	
 }
 
+/* --- Anpassung ReCollecting Dez 2017 ---*/
+body {
+	background:#ccc;
+}
+.header {
 
+	
+	background-color: #34495e;
+	
+}
+.icon_div, .module_headline  {
+	color: #fff;
+}
+.clickable_list_entry {
+	background-color: #C3AEAE;
+}
+.clickable_list_entry_highlighted {
+	background-color: #A07D7D;
+}
+/* Rote Umrandung für mandatory fields */
+#start_form_digitalisierungssignatur_digitalisierungssignatur, 
+#start_form_eintragsdokumentation_eintragsart,
+#objektbeschreibung_objekt_identifikation_titel,
+#objektbeschreibung_objekt_identifikation_standort_tws,
+#objektbeschreibung_objektzuordnung_objektgattung,
+#objektbeschreibung_objektzuordnung_objektart
+ {
+    outline-color: red;
+    /* background-color: red; */
+    border: dotted;
+    border-color: red;
+}
+
+textarea, input[type=text] {
+	width: 290px;
+
+}
+input[type=text],select{
+	height: 25px;
+	width: 290px;
+}
+input[readonly=true] {
+	background-color: grey;
+
+}
 /*--- Start ---*/
 
 #corpus_form{
@@ -192,7 +236,7 @@ padding: 5px 10px;
 
 	margin-right: 30px;
 	float: left;
-	width: 220px;
+	width:330px;
 
 }
 
@@ -252,7 +296,7 @@ padding: 5px 10px;
 
 	float: left;
 	position: absolute;
-	left: 270px;
+	left: 360px;
 	right:30px;
 	top:30px;
 
@@ -323,6 +367,11 @@ padding: 5px 10px;
 
 }
 
+
+#lido5_eventlist {
+	width: 215px;
+}
+
 .lidoperson_list_entry h2{
 
 	line-height: 0em;
@@ -336,24 +385,55 @@ padding: 5px 10px;
 }
 
 
-.lidoperson_title_div{
+.lidoperson_title_div, .lidoevent_title_div{
 
 	padding: 15px;
 
 }
 
-.lidoperson_content_div{
+.lidoperson_content_div, .lidoevent_content_div{
 
-	background-color: #AABFFF;
+	background-color: #AFC288;
 	padding: 10px;
 	
+}
+.lidoperson_content_div a {
+	color: red;
+	font-weight:bold;
+	text-decoration: underline;
+}
+#lido5_link_new_event #lido5_link_delete_active_events {
+	background-color: green;
 }
 
 .lidoperson_view{
 
-	background-color: lightskyblue;
+	background-color: #687575;
 	float: left;
-	left: 560px;
+	left: 590px;
+	position: absolute;
+	border-radius: 10px;
+	display: block;
+	min-width: 350px;
+
+}
+#lido2_lidoperson_view{
+
+	background-color: #687575;
+	float: left;
+	left: 960px;
+	position: absolute;
+	border-radius: 10px;
+	display: block;
+	min-width: 350px;
+
+}
+
+.lidoevent_view{
+
+	background-color: #687575;
+	float: left;
+	left: 0px;
 	position: absolute;
 	border-radius: 10px;
 	display: block;
@@ -365,6 +445,22 @@ padding: 5px 10px;
 
 	left: 600px;
 
+}
+
+#lido5_lidoevent_view{
+
+	left: 250px;
+	width: 250px;
+
+}
+#lido5_lidoperson_view{
+
+	left: 250px;
+
+}
+#lido5_actor_wrap {
+	left: 640px;
+	position: absolute;
 }
 
 .lidoperson_list_entry{
@@ -444,7 +540,7 @@ margin: 0px;
 
 td select{
 
-width: 150px;
+width: 300px;
 
 }
 
@@ -532,4 +628,18 @@ float: right;
 .left_wrap{
 	  float: left;
   margin-right: 50px;
+}
+
+
+.SF_search_entry {
+	background: bisque;
+	/* border-radius: 5px; */
+	padding: 10px;
+	margin-top: 1px;
+	margin-bottom: 1px;
+	margin-left: 0;
+	margin-right: 20px;
+	float: left;
+	width: 100%;
+	/* display: block; */
 }
